--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,15 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
 # 使用h2控制台
 spring.h2.console.enabled=true
+
+# mysql 连接数据库配置
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url= jdbc:mysql://localhost:3306/blog
+spring.datasource.username=root
+spring.datasource.password=ldf3291369
+
+# JPA相关配置
+# 显示sql语句控制台
+spring.jpa.show-sql=true
+# 设置数据库表自动生成格式
+spring.jpa.hibernate.ddl-auto=create-drop
