--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.h2.console.enabled=true
 
 # mysql 连接数据库配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://localhost:3306/blog
+spring.datasource.url= jdbc:mysql://localhost:3306/blog?useSSL=false&serverTimezone=UTC&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=ldf3291369
+spring.datasource.password=123456
 
 # JPA相关配置
 # 显示sql语句控制台
