--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ buildscript {
     //自定义hibernate版本
     ext['hibernate.version'] = '5.2.8.Final'
 
-
     //使用阿里云maven中央仓库
     repositories {
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
@@ -41,12 +40,16 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     //添加Thymeleaf的依赖
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-    //添加Srping Data JPA 的依赖
+    //添加Spring Data JPA 的依赖
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-//添加mysql连接驱动的依赖
+    //添加mysql连接驱动的依赖
     compile('mysql:mysql-connector-java:6.0.5')
     //添加h2数据库的依赖
     runtime('com.h2database:h2:1.4.193')
+    //添加Spring Data ElasticSearch 的依赖
+    compile('org.springframework.boot:spring-boot-starter-data-elasticsearch')
+    //添加JNA的依赖
+    complie('net.java.dev.jna:jna:4.3.0')
     //该依赖对于编译测试时必须的,默认包含变异产品依赖和编译时依
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
