--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,9 @@ spring.datasource.password=123456
 spring.jpa.show-sql=true
 # 设置数据库表自动生成格式
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# ElasticSearch 的相关配置
+# ElasticSearch 服务地址
+spring.data.elasticsearch.cluster-nodes=localhost:9300
+# 设置连接超时时间
+spring.data.elasticsearch.properties.transport.tcp.connect_timeout=120
