--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # ElasticSearch 服务地址
 spring.data.elasticsearch.cluster-nodes=localhost:9300
 # 设置连接超时时间
-spring.data.elasticsearch.properties.transport.tcp.connect_timeout=120
+spring.data.elasticsearch.properties.transport.tcp.connect_timeout=120s
