--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.h2.console.enabled=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url= jdbc:mysql://localhost:3306/blog?useSSL=false&serverTimezone=UTC&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=ldf3291369
 
 # JPA相关配置
 # 显示sql语句控制台
