--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.data.elasticsearch.cluster-nodes=localhost:9300
 # 设置连接超时时间
 spring.data.elasticsearch.properties.transport.tcp.connect_timeout=120s
+
+# 热部署配置
+spring.devtools.restart.exclude=static/**,templates/**
